Fix header on Firefox

--- a/css/blocks/Header.css
+++ b/css/blocks/Header.css
@@ -19,6 +19,7 @@
 }
 
 a.Header__logo {
+  display: block;
   font-size: 1.5rem;
   font-weight: bold;
   margin: -0.0675rem -0.25rem;
